gccida/c1/true_dependence
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/true_dependence/src/alias.c:2483:32: error: must use 'enum' tag to refer to type 'machine_mode'
int  true_dependence( rtx mem, machine_mode mem_mode, rtx x, int ( *varies)( rtx, int)) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/true_dependence/src/alias.c:2485:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/true_dependence/src/alias.c:2515:35: error: use of undeclared identifier 'machine_mode'
if ( base_alias_check( addr, y, ( machine_mode)*( ( unsigned __int8 *)x + 2), v6) ) 
                                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/true_dependence/src/obj/alias.o] Error 1
